<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".Home.Permission.PermissionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="30dp"
                android:text="@string/grant_access"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:fontFamily="@font/led_dot_matrix"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/smartphone"
                    android:contentDescription="@string/todo"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dots"
                    android:contentDescription="@string/todo"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/lock"
                    android:contentDescription="@string/todo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/permission_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/permission_message"
                    android:textColor="@color/gray"
                    android:textSize="17sp"
                    android:fontFamily="@font/cyber_punk"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/light_dark">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:fontFamily="@font/led_dot_matrix"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/light_dark">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quit"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:fontFamily="@font/led_dot_matrix"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>